	Table object.  It's valid to have an empty path for the situation
	where a user wants to use an ipset in place of the table.
	However, if there is a path and it comes out blank in
	getSourceNameAsPath() then that means %DATADIR% expansion failed.

	* Fixed #2440.  Now when a firewall is matched in the quick
	filter, all child elements (e.g. policies, interfaces) will be
	displayed as well.

2011-07-11  theron	<theron@netcitadel.com>
	* Implemented #2514, support for address table alternate paths.
	There's a "data directory" setting under user preferences.  If the
	user selects an address table file using "choose file" and that
	file is "inside" the data directory, then the appropriate part of
	the path is replaced with %DATADIR% as a variable.  If the address
	table is marked "run-time" then the path is taken from the
	firewall data directory option.

2011-07-11  Vadim Kurland  <vadim@netcitadel.com>

	* TableFactory.cpp (createTablesForRE): see #2513 "Group and
	Address Table name persistence in generated config". Compiler for
	PF can now preserve names of object groups, dynamic groups,
	compile-time AddressTable and compile-time DNSName objects in
	the generated pf.conf file. This is optional and is controlled
	by a checkbox in the firewall settings dialog.

2011-07-09  vadim  <vadim@netcitadel.com>

	* pf.g (rule_extended): see #2551 Importer should parse PF rules
	that use "route-to", "reply-to" and "dup-to" options in both
	pre-4.7 and 4.7 formats. In PF 4.7 these parameters moved to the
	end of the rule and are now part of the "filteropts" block of
	parameters.

	* PFImporter.cpp (pushPolicyRule): see #2551 Importer should
	correctly import "pool type" parameter that follows source routing
	rule options "route-to", "reply-to" and "dup-to". Also, since
	currently fwbuilder does not support source routing rules with
	multiple different interface-gateway pairs (only one interface in
	combination with one or multiple gateway addresses are supported),